<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_tts_settings"
        android:title="@string/menu_tts_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tts_browser"
        android:title="@string/menu_tts_browser"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:title="@string/menu_language"
        app:showAsAction="never" />

    <!-- 调试模式下可见；仅出现在 ⋮ 溢出菜单，标题由 DebugModeUi 着色 -->
    <item
        android:id="@+id/action_exit_debug_mode"
        android:title="@string/test_mode_exit"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/menu_about"
        app:showAsAction="never" />
</menu> 