<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardTestCase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_8"
    app:cardBackgroundColor="@color/pure_white"
    app:cardCornerRadius="@dimen/dp_12"
    app:cardElevation="0dp"
    app:cardMaxElevation="0dp"
    app:strokeColor="@color/theme_border"
    app:strokeWidth="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbTestCase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/debug_mode_checkbox_tint"
                android:gravity="center_vertical|start"
                android:minHeight="@dimen/dp_32"
                android:text="@string/test_case_name"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/sp_15"
                tools:text="输出 TTS 引擎信息" />

            <ImageView
                android:id="@+id/btnToggleDesc"
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:background="@drawable/bg_debug_panel_text_action"
                android:clickable="true"
                android:contentDescription="@string/test_mode_btn_expand_all_desc"
                android:focusable="true"
                android:padding="@dimen/dp_8"
                android:scaleType="centerInside"
                android:src="@drawable/ic_debug_expand"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvTestCaseDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@color/theme_lighter_bg"
            android:lineSpacingExtra="@dimen/dp_4"
            android:padding="@dimen/dp_12"
            android:text="@string/test_case_description"
            android:textColor="@color/gray_666"
            android:textSize="@dimen/sp_13"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
